@@ -84,12 +84,12 @@ def write_stats(file_pointer,character,stats):
 def write_chars(file_pointer,char_dict):
       char_keys = ["start","start2","cathedral","castle","proto","burrow","dactyl"]
       loadchars = [0x57,0x5C,0x62,0x6A,0x68,0x6C,0x6D]
-      charnames = [0x39D7E,0x39D80,0x377090,0x5F6E5,0x372AB9,0x389321,0x3BB90E]
+      charnames = [0x39D7E,0x39D80,0x377090,0x5F6E5,0x372AB7,0x389321,0x3BB90E]
       chars = [0x39D82,0x39D84,0x376FEB,0x5F5EE,0x372A6F,0x389269,0x3BB8FA]
-      chars2 = [0,0,0x377088,0x5F6DD,0x372AAF,0x389317,0x3BB904]
-      chars3 = [0,0,0x377099,0x5F6E8,0x372AC3,0x38932B,0x3BB916]
-      chars4 = [0,0,0x3770D1,0x5F6E8,0x372ADD,0x389347,0x3BB927]
-      charloads = [0,0,0x3770D2,0x5F6E8,0x372ADE,0x389348,0x3BB928]
+      chars2 = [0,0,0x377088,0x5F6DD,0x372AAD,0x389317,0x3BB904]
+      chars3 = [0,0,0x377099,0x5F6E8,0x372AC1,0x38932B,0x3BB916]
+      chars4 = [0,0,0x3770D1,0x5F6E8,0x372ADB,0x389347,0x3BB927]
+      charloads = [0,0,0x3770D2,0x5F6E8,0x372ADC,0x389348,0x3BB928]
       i = 0
       while i < 7:
             char = char_dict[char_keys[i]][0]
