@@ -33,7 +33,7 @@ armor_trades = [0x39029B,0x3902A4]
 trade_helms = [0x8B,0x88,0x92,0x93,0x8A,0x91,0x86]
 helm_trades = [0x3902AC,0x3902B9]
 rocks = [0xAE,0xAF,0xB0,0xB1,0xB2]
-denadoro_rock = [0x38EB00,0x38EB04]
+denadoro_rock = [0x38EB03,0x38EB06]
 def randomize_hardcoded_items(outfile):
    f = open(outfile,"r+b")
    i = 0
